fix containedWidget background and overflow, add back smaller text on smaller sized screens

--- a/packages/frontend/src/app.scss
+++ b/packages/frontend/src/app.scss
@@ -201,5 +201,7 @@ main {
 		height: calc(100% - 35px);
 		box-sizing: border-box;
 		overflow-y: scroll;
+		overflow-x: hidden;
+		background-color: var(--bg-secondary);
 	}
 }
