--- a/packages/frontend/static/themes/purpura.scss
+++ b/packages/frontend/static/themes/purpura.scss
@@ -1,10 +1,10 @@
 .theme-purpura {
-	--bg-primary: #1b1722;
+	--bg-primary: #1d1825;
 	--bg-secondary: #221c2c;
 	--bg-tertiary: #2b2438;
 	--bg-accent: #383046;
 
-	--bg-primary-50: #1b172250;
+	--bg-primary-50: #1d182550;
 	--bg-secondary-50: #221c2c50;
 	--bg-tertiary-50: #2b243850;
 	--bg-accent-50: #38304650;
